weights and bias log

--- a/Ejercicio 01.ipynb
+++ b/Ejercicio 01.ipynb
@@ -113,11 +113,18 @@
    "outputs": [],
    "source": [
     "def simulation(epochs, dataset, perceptron, table):\n",
+    "    weights_log = [perceptron.weights]\n",
+    "    bias_log = [perceptron.bias]\n",
+    "    \n",
     "    for epoch in range(epochs):\n",
     "        for i in range(len(dataset)):\n",
     "            perceptron.propagation(dataset[i, 0:3])\n",
     "            table.rows.append(data(epoch, perceptron.data(), dataset[i, 3]))\n",
-    "            perceptron.update(lr=0.5, output=dataset[i, 3])"
+    "            perceptron.update(lr=0.5, output=dataset[i, 3])\n",
+    "            weights_log = np.concatenate((weights_log, [perceptron.weights]), axis=0)\n",
+    "            bias_log.append(perceptron.bias)\n",
+    "            \n",
+    "    return weights_log, bias_log"
    ]
   },
   {
