disjunction plot log case

--- a/Ejercicio 01.ipynb
+++ b/Ejercicio 01.ipynb
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d19e8e0e",
+   "id": "f944c23e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:40:20.483443Z",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "52738718",
+   "id": "0d32df18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:40:21.510490Z",
@@ -1105,7 +1105,17 @@
     }
    ],
    "source": [
-    "simulation(30, disjunction, p_disjunction, table)"
+    "disjunction_log = simulation(30, disjunction, p_disjunction, table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04b0cae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot()"
    ]
   },
   {
