conditionality plot log case

--- a/Ejercicio 01.ipynb
+++ b/Ejercicio 01.ipynb
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "19a87fbd",
+   "id": "aaa2ae09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:47:55.040592Z",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a3f408b7",
+   "id": "0ec4fecc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:47:55.891163Z",
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8cce7475",
+   "id": "9b462ede",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:47:56.930199Z",
@@ -1865,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a7934a2d",
+   "id": "dec75cd9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-11T04:47:57.932200Z",
@@ -4440,7 +4440,7 @@
     }
    ],
    "source": [
-    "simulation(30, conditionality, p_conditionality, table)"
+    "conditionalitysimulation(30, conditionality, p_conditionality, table)"
    ]
   },
   {
